# litellm-rust

./: .dockerignore  .gitignore  AGENTS.md  CODING_STANDARDS.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  config.yaml.example  deployment.md
.githooks/: pre-commit
.github/workflows/: rust-checks.yml
deploy/: render.config.yaml
docs/: architecture.md  auth.md  contributing.md  cursor.md  debugging.md  design-multiple-runtime-harnesses.md  lap-managed-agents-sdk.md  mcp.md  protocols.md  sdk_api.md
scripts/: check_code_size.py
skills/: babysit-pr.md  create-harness.md  lite-schedule.md  skill.md
src/: README.md  cli.rs  errors.rs  lib.rs  main.rs  model_prices.rs
src/agents/: config.rs  events.rs  locks.rs  mod.rs  runs.rs  sessions.rs
src/ai_gateway/: messages.rs  mod.rs  provider.rs
src/app/: errors.rs  state.rs
src/auth/: master_key.rs
src/callbacks/: README.md  base.rs  events.rs  litellm_db.rs  mod.rs  standard_logging.rs
src/cli/: claude.rs  codex.rs  credentials.rs  mod.rs  parser.rs  selector.rs  skills.rs  terminal.rs  ui.rs
src/config/: loader.rs  schema.rs  validation.rs
src/db/: credentials.rs  mod.rs  vault_keys.rs
src/http/: agent_runs.rs  agent_runtime_tools.rs  agent_runtimes.rs  agents.rs  capabilities.rs  chat_completions.rs  credential_overrides.rs  gemini.rs  harness_proxy.rs  llm.rs  mcp_credentials.rs  messages.rs  mod.rs  models.rs  openapi.rs  provider_credentials.rs  responses.rs  routes.rs  runtime_resolution.rs  sessions.rs  swagger.html  ui.rs  users.rs  vault.rs  whoami.rs
src/mcp/: AGENTS.md  mod.rs  registry.rs  route.rs  upstream.rs
src/models/: mod.rs  registry.rs
src/providers/: base.rs  deployment.rs  mod.rs  registry.rs  router.rs  transform.rs
src/proxy/: config.rs  config_types.rs  credential_crypto.rs  mcp_config.rs  mod.rs  provider_credentials.rs  state.rs  vault.rs
tests/: agents.rs  cache.rs  cache_streaming.rs  callbacks.rs  claude_agent_sdk_mcp_client.mjs  config_loader.rs  config_loader_mcp.rs  conversion_anthropic.rs  conversion_cache.rs  conversion_chat_responses.rs  conversion_gemini_anthropic.rs  conversion_gemini_openai.rs  conversion_gemini_streaming.rs  conversion_responses_anthropic.rs  features.rs  features_messages.rs  features_reasoning.rs  managed_agents_api.rs  managed_agents_live_compare.rs  managed_agents_sdk.rs  managed_agents_sdk_provision.rs  mcp.rs  mcp_deepwiki_live.rs  messages.rs  opencode_anthropic_server_live.rs  responses.rs  sdk_structure.rs  semantic_cache.rs  ui.rs  user_mcp_credentials.rs
(+381 files in other folders)
