[package]
name = "litellm-rust"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "lite"
path = "src/main.rs"

[dependencies]
axum = "0.8"
base64 = "0.22"
dotenvy = "0.15"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"
