[package]
name = "litellm-rust"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "lite"
path = "src/main.rs"

[features]
# Optional Redis backend for the response cache (multi-instance deployments).
redis-cache = ["dep:redis"]
# Optional embedding-based semantic response cache. Off by default and not
# recommended for coding-agent workloads (low hit rate, wrong-answer risk).
semantic-cache = []

[dependencies]
axum = "0.8"
base64 = "0.22"
blake3 = "1"
crypto_secretbox = { version = "0.1", features = ["std"] }
dotenvy = "0.15"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
http = "1"
moka = { version = "0.12", features = ["future"] }
percent-encoding = "2"
redb = "4"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "tokio-rustls-comp"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"
